# ai_voice

./: .gitignore  README.md  alembic.ini  implementation-plan.md  open-source-aaa-architecture.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile.gateway  docker-compose.profile-dev.yaml
deploy/observability/: prometheus.yml
mcp-servers/calendar/: server.py  store.py
mcp-servers/sql-readonly/: executor.py  guard.py  requirements.txt  server.py
mcp-servers/twenty-crm/: server.py  store.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
policies/: saap_actions.rego  saap_actions_test.rego
policies/tenant/: dental_clinic.rego
saap/compliance/: __init__.py  audit.py  breach.py  chain.py  consent.py  erasure.py  evidence_pack.py  pii.py  policy.py  rate_limit.py  runtime.py
saap/core/: __init__.py  billing.py  events.py  fakes.py  flow.py  i18n.py  llm.py  mcp.py  memory.py  registry.py  types.py  voice.py
saap/gateway/: app.py  auth.py  channels.py  dev_runtime.py  langflow_runtime.py  matrix_whatsapp.py  orchestrator.py  webchat.py  webhook.py
saap/ingest/: pipeline.py
saap/langflow_components/logic/: audit_close.py  compliance_ingress.py  grounded_responder.py  hitl_checkpoint.py  mcp_toolkit.py  model_router_llm.py  rag_retriever.py
saap/plugins/billing/lago/: __init__.py
saap/plugins/llm/ollama/: __init__.py
saap/plugins/llm/vllm/: __init__.py
saap/plugins/memory/pgvector/: __init__.py
saap/plugins/memory/qdrant/: __init__.py
saap/plugins/voice/faster_whisper/: __init__.py
saap/plugins/voice/piper/: __init__.py
saap/plugins/voice/silero/: __init__.py
saap/scheduler/: flow_scheduler.py
saap/tenancy/: blueprint.py  provisioner.py
saap/verticals/audit/: report_writer.py  roi_calculator.py
saap/verticals/realestate/: lead_score.py
saap/voice/: session_runtime.py
tests/compliance/: test_audit.py  test_breach.py  test_chain.py  test_consent.py  test_erasure.py  test_evidence_pack.py  test_pii.py  test_policy.py  test_rate_limit.py  test_runtime.py
tests/core/: test_i18n.py  test_llm_router.py  test_mcp.py  test_memory.py  test_registry.py  test_types.py  test_voice.py
tests/gateway/: test_app.py  test_matrix_whatsapp.py  test_webhook.py
tests/ingest/: test_pipeline.py
tests/langflow_components/: test_audit_close_logic.py  test_compliance_ingress_logic.py  test_grounded_responder_logic.py  test_hitl_checkpoint_logic.py  test_mcp_toolkit_logic.py  test_model_router_llm_logic.py  test_rag_retriever_logic.py
tests/mcp_servers/: _loader.py  test_calendar.py  test_sql_readonly_guard.py  test_sql_readonly_server.py  test_twenty_crm.py
tests/plugins/: test_faster_whisper.py  test_lago.py  test_ollama.py  test_pgvector.py  test_piper.py  test_qdrant.py  test_silero_vad.py  test_vllm.py
tests/scheduler/: test_flow_scheduler.py
tests/tenancy/: test_blueprint.py  test_provisioner.py
tests/tools/: test_eval_harness.py  test_flow_linter.py  test_license_gate.py
tests/verticals/audit/: test_report_writer.py  test_roi_calculator.py
tests/verticals/realestate/: test_lead_score.py
tests/voice/: test_session_runtime.py
tools/eval_harness/: harness.py
tools/eval_harness/examples/: dental_booking.yaml  dental_hours.yaml
tools/flow_linter/: linter.py
tools/license_gate/: gate.py  policy.yaml
