[project]
name = "saap"
version = "0.1.0"
description = "Sovereign AI Automation Platform — open-source, local-first AAA platform"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "cryptography>=42.0",
    "importlib_metadata>=7.0",
    "packaging>=24.0",
    "PyYAML>=6.0",
    "PyJWT[crypto]>=2.8",
    "websockets>=12.0",
    "mcp>=1.0",
    "sqlparse>=0.5",
    "pgvector>=0.3",
    "onnxruntime>=1.16",
    "numpy>=1.26",
    "faster-whisper>=1.0",
    # Deliberately NOT depending on the `piper-tts` PyPI package here —
    # see saap/plugins/voice/piper/__init__.py's module docstring for
    # why (short version: it either IS GPL-3.0-or-later, as of 1.3.0+,
    # or bundles a compiled libespeak-ng.so, itself GPL-3.0, under an
    # MIT label, as of <=1.2.0 — neither is safe to add as a direct
    # dependency under P1).
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.entry-points."saap.plugins"]
"llm.ollama" = "saap.plugins.llm.ollama:register"
"llm.vllm" = "saap.plugins.llm.vllm:register"
"memory.qdrant" = "saap.plugins.memory.qdrant:register"
"memory.pgvector" = "saap.plugins.memory.pgvector:register"
"voice.silero" = "saap.plugins.voice.silero:register"
"voice.faster_whisper" = "saap.plugins.voice.faster_whisper:register"
"voice.piper" = "saap.plugins.voice.piper:register"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["saap", "tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["saap.core"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "saap.plugins.*"
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saap"]
